namespace/my-namespace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-namespace-pod
  namespace: my-namespace
spec:
  containers:
  - name: nginx
    image: nginx
